white-space pre-wrap in plaintext email bodies to make sure it shows original formatting but still wraps when reaching box boundaries

--- a/src/main/resources/static/css/emailviewer.css
+++ b/src/main/resources/static/css/emailviewer.css
@@ -95,6 +95,9 @@
     font-family: sans-serif;
     width: 100%;
     max-width: 66ch;
+    /* https://developer.mozilla.org/en-US/docs/Web/CSS/white-space
+       white space sequences are preserved, breaking at box boundaries */
+    white-space: pre-wrap;
 }
 
 #emailbody > iframe {
